chore: move social link icons into modular component chore: move email link into modular component chore: fix alignment and positioning of dropdown nav menu chore: fix responsiveness of scroll up arrow chore: apply styling updates to icons chore: add new email icon chore: remove date from footer chore: fix alignment and sizes of contents in footer chore: apply encrypted email formatting

--- a/build-001/src/styles/_variables.scss
+++ b/build-001/src/styles/_variables.scss
@@ -47,7 +47,7 @@
   //#F5F5F5 #F2F2F2 #f5f8fa #f3f3ec #e7524b #e8e8e8
 
   //-- FONT-SIZE
-  --tc-text-sm: 90%;
+  --tc-text-sm: 0.625rem;
   --tc-text-md: 1rem;
   --tc-text-lg: 2rem;
 
